; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_menu_pico.c_mgn_dev_name.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_menu_pico.c_mgn_dev_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mgn_dev_name.it = internal global i32 0, align 4
@MA_CTRL_DEV_FIRST = common dso_local global i32 0, align 4
@IN_MAX_DEVS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32*)* @mgn_dev_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mgn_dev_name(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  store i8* null, i8** %5, align 8
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @MA_CTRL_DEV_FIRST, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* @mgn_dev_name.it, align 4
  br label %10

10:                                               ; preds = %9, %2
  br label %11

11:                                               ; preds = %22, %10
  %12 = load i32, i32* @mgn_dev_name.it, align 4
  %13 = load i32, i32* @IN_MAX_DEVS, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %25

15:                                               ; preds = %11
  %16 = load i32, i32* @mgn_dev_name.it, align 4
  %17 = call i8* @in_get_dev_name(i32 %16, i32 1, i32 1)
  store i8* %17, i8** %5, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  br label %25

21:                                               ; preds = %15
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* @mgn_dev_name.it, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* @mgn_dev_name.it, align 4
  br label %11

25:                                               ; preds = %20, %11
  %26 = load i32, i32* @mgn_dev_name.it, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* @mgn_dev_name.it, align 4
  %28 = load i8*, i8** %5, align 8
  ret i8* %28
}

declare dso_local i8* @in_get_dev_name(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
